--- a/main.css
+++ b/main.css
@@ -1,9 +1,9 @@
 body {
   background-color: gray !important;
+  font-family: "Kosugi Maru", sans-serif !important;
 }
 
 #header {
-  
 }
 
 /* 配信開始ボタン */
