--- a/main.css
+++ b/main.css
@@ -140,11 +140,11 @@ body {
   #comment_header_area input {
     visibility: visible;
     position: absolute;
+    text-align: left;
     z-index: 10;
     bottom: 12px;
-    left: 24px;
-    width: 180px;
-    height: 40px;
+    left: 32px;
+    opacity: 0.6;
     background-color: #333;
     border: none;
     color: #fff;
